src/objects/Case_Connection__c.object
<CustomObject>
    <fields>
        <fullName>Account__c</fullName>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Connection Meter Reads</relationshipLabel>
        <relationshipName>Connection_Meter_Reads</relationshipName>
        <relationshipOrder>1</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Case__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Case</label>
        <referenceTo>Case</referenceTo>
        <relationshipLabel>Connection Meter Reads</relationshipLabel>
        <relationshipName>Connection_Meter_Reads</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Comments__c</fullName>
        <label>Comments</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Connection_Installation_Number__c</fullName>
        <formula>Connection__r.SAP_Installation_Number__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Connection Installation Number</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Connection__c</fullName>
        <label>Connection</label>
        <referenceTo>Connection__c</referenceTo>
        <relationshipName>Case_Connections</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>MRID_Number__c</fullName>
        <label>MRID Number</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Meter_Read_Date__c</fullName>
        <label>Meter Read Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Meter_Read_Status__c</fullName>
        <formula>TEXT(Case__r.Meter_Read_Status__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Meter Read Status</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Meter_Read_Value__c</fullName>
        <label>Meter Read Value</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Meter_Reading_Reason__c</fullName>
        <label>Meter Reading Reason</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Periodic reading</fullName>
                </value>
                <value>
                    <fullName>Interim reading with billing</fullName>
                </value>
                <value>
                    <fullName>Final reading (move-out) </fullName>
                </value>
                <value>
                    <fullName>Interim reading with out billing</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Meter_Reading_Status__c</fullName>
        <label>Meter Reading Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Actual</fullName>
                </value>
                <value>
                    <fullName>Estimated</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Meter_Reading_Type__c</fullName>
        <label>Meter Reading Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Meter Reading by Utility</fullName>
                </value>
                <value>
                    <fullName>Meter Reading by Customer</fullName>
                </value>
                <value>
                    <fullName>Automatic Estimation</fullName>
                </value>
                <value>
                    <fullName>Meter Reading Interpolated</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Meter_Serial_Number__c</fullName>
        <label>Meter Serial Number</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Opportunity_Connection__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Opportunity</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipName>Case_Connections</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Plausibility_Result__c</fullName>
        <label>Plausibility Result</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Reason_For_Rejection__c</fullName>
        <label>Reason For Rejection</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Reason_To_Release__c</fullName>
        <label>Reason To Release</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Water Damage</fullName>
                </value>
                <value>
                    <fullName>Other Damage</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Todays_Date__c</fullName>
        <defaultValue>TODAY()</defaultValue>
        <label>Todays Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <label>Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Move In</fullName>
                </value>
                <value>
                    <fullName>Move Out</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Connection Meter Read</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>CC-{0000000}</displayFormat>
        <label>Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Connection Meter Reads</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>